hphp/test/slow/await-exprs-inout-2.php.expectf
Fatal error: Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. in %s/await-exprs-inout-2.php on line 7
